updated Indonesian and Italian translation

--- a/po/wesnoth-help/id.po
+++ b/po/wesnoth-help/id.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3-svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-21 01:34+0100\n"
-"PO-Revision-Date: 2011-11-25 20:46+0700\n"
+"POT-Creation-Date: 2012-01-22 15:00+0100\n"
+"PO-Revision-Date: 2012-01-27 22:37+0700\n"
 "Last-Translator: Yuris <yuris_wicaksana@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -242,18 +242,12 @@ msgstr "Benua Baru"
 
 #. [topic]: id=new_continent
 #: data/core/encyclopedia/drakes.cfg:38
-#, fuzzy
-#| msgid ""
-#| "New Continent -- The great continent to the east of <ref>dst='morogor' "
-#| "text='Morogor'</ref>. Its existence is unknown to the drakes until the "
-#| "flight of Galun."
 msgid ""
 "The great continent to the east of <ref>dst='morogor' text='Morogor'</ref>. "
 "Its existence is unknown to the drakes until the flight of Galun."
 msgstr ""
-"Benua Baru -- benua besar di sebelah timur dari <ref>dst='morogor' "
-"text='Morogor'</ref>. Keberadaannya tidak diketahui oleh bangsa drake sampai "
-"penerbangan Galun."
+"Benua besar di sebelah timur dari <ref>dst='morogor' text='Morogor'</ref>. "
+"Keberadaannya tidak diketahui oleh bangsa drake sampai penerbangan Galun."
 
 #. [topic]: id=abyss
 #: data/core/encyclopedia/drakes.cfg:43
@@ -1400,19 +1394,6 @@ msgstr "Merekrut dan Memanggil Kembali"
 
 #. [topic]: id=recruit_and_recall
 #: data/core/help.cfg:163
-#, fuzzy
-#| msgid ""
-#| "Each side begins with one leader in their keep. At the start of any "
-#| "battle, and at times during it, you will need to recruit <ref>dst='.."
-#| "units' text='units'</ref> into your army. To recruit, you must have your "
-#| "leader (for instance, Konrad in the <italic>text='Heir to the Throne'</"
-#| "italic> campaign) on the keep square of a <ref>dst='terrain_castle' "
-#| "text='castle'</ref>. Then you may recruit by either choosing "
-#| "<bold>text='Recruit'</bold> from the menu or right-clicking on a hex and "
-#| "selecting <bold>text='Recruit'</bold>. This brings up the recruit menu, "
-#| "which lists units available for recruitment, along with their gold cost. "
-#| "Click on a unit to see its statistics, then press the recruit button to "
-#| "recruit it."
 msgid ""
 "Each side begins with one leader in their keep. At the start of any battle, "
 "and at times during it, you will need to recruit <ref>dst='..units' "
@@ -1429,8 +1410,8 @@ msgstr ""
 "setiap pertempuran, dan selama berada dalam pertempuran, anda akan perlu "
 "merekrut <ref>dst='..units' text='unit-unit'</ref> ke dalam tentara anda. "
 "Untuk merekrut, anda harus menaruh pemimpin anda (misalnya, Konrad di "
-"kampanye <italic>text='Pewaris Takhta'</italic>) di alun-alun benteng di "
-"sebuah <ref>dst='terrain_castle' text='Istana'</ref>. Setelah itu, anda bisa "
+"kampanye <italic>text='Pewaris Takhta'</italic>) di heks benteng dari sebuah "
+"<ref>dst='terrain_castle' text='istana'</ref>. Setelah itu, anda bisa "
 "merekrut baik dengan memilih <bold>text='Rekrut'</bold> dari menu atau "
 "mengklik kanan di sebuah heks dan memilih <bold>text='Rekrut'</bold>. Ini "
 "memunculkan menu rekrut, yang mana daftar-daftar unit-unit tersedia untuk "
@@ -1439,15 +1420,6 @@ msgstr ""
 
 #. [topic]: id=recruit_and_recall
 #: data/core/help.cfg:165
-#, fuzzy
-#| msgid ""
-#| "\n"
-#| "\n"
-#| "If you right-clicked on a castle hex and selected recruit, the new unit "
-#| "will appear in that square. Otherwise, it will appear in a free square "
-#| "near the keep. You may only recruit as many units as you have free hexes "
-#| "in your castle, and you cannot spend more gold than you actually have on "
-#| "recruiting."
 msgid ""
 "\n"
 "\n"
@@ -1459,10 +1431,10 @@ msgstr ""
 "\n"
 "\n"
 "Jika anda mengklik kanan di sebuah heks istana dan memilih rekrut, unit yang "
-"baru akan muncul di situ. Kalau tidak, ia akan muncul di tempat kosong di "
-"dekat benteng. Anda hanya boleh merekrut sebanyak unit sebanyak heks kosong "
-"di istana anda, dan anda tidak bisa membelanjakan lebih banyak emas dari "
-"yang anda punya ketika merekrut."
+"baru akan muncul di situ. Kalau tidak, ia akan muncul di heks kosong di "
+"dekat benteng. Anda hanya boleh merekrut unit sebanyak heks kosong di istana "
+"anda, dan anda tidak bisa membelanjakan lebih banyak emas dari yang anda "
+"punya ketika merekrut."
 
 #. [topic]: id=recruit_and_recall
 #: data/core/help.cfg:167
@@ -3138,17 +3110,6 @@ msgstr "Istana"
 
 #. [topic]: id=terrain_castle
 #: data/core/help.cfg:614
-#, fuzzy
-#| msgid ""
-#| "<italic>text='Castles'</italic> are any sort of permanent fortification. "
-#| "Nearly all units receive a considerable bonus to their defense by being "
-#| "stationed in a castle, and all units receive full movement in a castle. "
-#| "Stationing units in a castle represents its defensive capability. Without "
-#| "a unit in each wall hex, an enemy can simply sneak into the castle "
-#| "unchallenged, gaining the same defensive bonus as everyone inside.\n"
-#| "\n"
-#| "Most units have about 60% defense in a castle.\n"
-#| "\n"
 msgid ""
 "<italic>text='Castles'</italic> are any sort of permanent fortification. "
 "Nearly all units receive a considerable bonus to their defense by being "
@@ -3162,11 +3123,11 @@ msgid ""
 msgstr ""
 "<italic>text='Benteng'</italic> adalah semacam pertahanan permanen. Hampir "
 "semua unit-unit mendapat banyak bonus perlindungan dengan ditempatkan di "
-"dalam sebuah benteng, dan semua unit mendapat pergerakan penuh di sebuah "
-"benteng. Menaruh unit-unit di sebuah benteng menggambarkan kemampuan "
+"dalam sebuah benteng, dan sebagian besar unit mendapat pergerakan penuh di "
+"sebuah benteng. Menaruh unit-unit di sebuah benteng menggambarkan kemampuan "
 "bertahannya. Tanpa sebuah unit di setiap heks tembok, musuh bisa dengan "
-"mudah menyelinap ke dalam benteng tanpa tantangan, mendapat bonus "
-"perlindungan yang sama seperti semua orang yang ada di dalam.\n"
+"mudah menyelinap ke dalam benteng tanpa terlawan, mendapat bonus "
+"perlindungan yang sama seperti semua orang yang ada di dalamnya.\n"
 "\n"
 "Hampir semua unit mendapat sekitar 60% perlindungan di sebuah benteng.\n"
 "\n"
