--- a/po/wesnoth-l/id.po
+++ b/po/wesnoth-l/id.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-06 11:47+0100\n"
-"PO-Revision-Date: 2011-11-16 15:31+0700\n"
+"POT-Creation-Date: 2012-01-22 15:00+0100\n"
+"PO-Revision-Date: 2012-01-27 22:37+0700\n"
 "Last-Translator: Yuris <yuris_wicaksana@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -2829,19 +2829,14 @@ msgstr "Petani Pemburu"
 
 #. [unit_type]: id=Huntsman_Peasant
 #: data/campaigns/Liberty/units/Villagers.cfg:228
-#, fuzzy
-#| msgid ""
-#| "Huntsmen have spent their lives in the backwoods and swamps of their "
-#| "wilderness homes. They can bullseye wamprats and track anything that "
-#| "moves in their territory."
 msgid ""
 "Huntsmen have spent their lives in the backwoods and swamps of their "
 "wilderness homes. They can bullseye ferocious swamp rats and track anything "
 "that moves in their territory."
 msgstr ""
-"Pemburu menghabiskan masa hidup mereka di tempat terpencil dan rawa rumah "
-"hutan belantara mereka. Mereka dapat memberikan jawaban yang tepat wamprats "
-"dan mengikuti jejak apapun yang bergerak di wilayah mereka."
+"Para pemburu telah menghabiskan masa hidup mereka di tempat terpencil dan "
+"rawa rumah hutan belantara mereka. Mereka dapat menjadikan sasaran tikus-"
+"tikus rawa ganas dan mengikuti jejak apapun yang bergerak di wilayah mereka."
 
 #. [object]: id={ID}
 #: data/campaigns/Liberty/utils/utils.cfg:54
