updated Italian translation

--- a/po/wesnoth-ei/it.po
+++ b/po/wesnoth-ei/it.po
@@ -1278,7 +1278,7 @@ msgid ""
 "the Revenants, one of us knights is let free!"
 msgstr ""
 "Grazie per aver sconfitto quello scheletro guerriero! Ogni volta che uccidi "
-"uno degli Squartatori, uno dei miei cavalieri viene liberato!"
+"uno dei Revenenti, uno dei miei cavalieri viene liberato!"
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/04c_Mal-Ravanals_Capital.cfg:399
