--- a/po/wesnoth-help/it.po
+++ b/po/wesnoth-help/it.po
@@ -14,8 +14,8 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-01-27 22:38+0100\n"
-"Last-Translator: Antonio \"Antro\" Rosella <arosella@yahoo.com>\n"
+"PO-Revision-Date: 2012-01-28 14:31+0100\n"
+"Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
@@ -1273,17 +1273,6 @@ msgstr ""
 
 #. [topic]: id=fundamentals
 #: data/core/help.cfg:135
-#, fuzzy
-#| msgid ""
-#| "\n"
-#| "\n"
-#| "To begin with, it’s best to click the <bold>text='Tutorial’</bold> button "
-#| "at the main menu. This will take you to the interactive tutorial, which "
-#| "will teach you the basics of Wesnoth. After this, it is recommended that "
-#| "you play the Heir to the Throne campaign first — click "
-#| "<bold>text='Campaign'</bold> then <italic>text='Heir to the Throne'</"
-#| "italic>. As <italic>text='Battle for Wesnoth'</italic> can be quite "
-#| "challenging, you may wish to start on easy."
 msgid ""
 "\n"
 "\n"
@@ -1300,9 +1289,9 @@ msgstr ""
 "bold> nel menù principale. Questo ti porterà alla missione introduttiva che "
 "ti insegnerà le basi di Wesnoth. Dopo averla terminato è consigliabile "
 "giocare per prima la campagna L’erede al trono — fai clic su "
-"<bold>text='Campagna'</bold> poi <bold>text='Erede al Trono'</bold>. Il "
-"gioco può risultare impegnativo, quindi prova a iniziare con la modalità "
-"facile."
+"<bold>text='Campagna'</bold> poi <italic>text='Erede al Trono'</italic>. "
+"<italic>text='Battle for Wesnoth'</italic> può risultare impegnativo, prova "
+"quindi a iniziare con la modalità facile."
 
 #. [topic]: id=fundamentals
 #: data/core/help.cfg:138
