updated French translation

--- a/po/wesnoth-aoi/fr.po
+++ b/po/wesnoth-aoi/fr.po
@@ -25,7 +25,7 @@ msgstr "UIO"
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:16
 msgid "(Beginner)"
-msgstr "(débutant)"
+msgstr "(Débutant)"
 
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:16
@@ -35,7 +35,7 @@ msgstr "Combattant"
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:17
 msgid "(Normal)"
-msgstr "(normal)"
+msgstr "(Normal)"
 
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:17
@@ -45,7 +45,7 @@ msgstr "Seigneur"
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:18
 msgid "(Challenging)"
-msgstr "(difficile)"
+msgstr "(Difficile)"
 
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:18
@@ -55,7 +55,7 @@ msgstr "Haut seigneur"
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:22
 msgid "(Novice level, 7 scenarios.)"
-msgstr "(Niveau débutant, 7 scénarios)."
+msgstr "(Niveau débutant, 7 scénarios.)"
 
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:22
