--- a/po/wesnoth-did/fr.po
+++ b/po/wesnoth-did/fr.po
@@ -63,7 +63,7 @@ msgstr "Thaumaturge"
 #. [campaign]: id=Descent_into_Darkness
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:22
 msgid "(Intermediate level, 12 scenarios.)"
-msgstr "(Niveau moyen, 12 scénarios.)"
+msgstr "(Niveau intermédiaire, 12 scénarios.)"
 
 #. [campaign]: id=Descent_into_Darkness
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:22
