--- a/po/wesnoth-dw/fr.po
+++ b/po/wesnoth-dw/fr.po
@@ -73,7 +73,7 @@ msgstr "Triton"
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:22
 msgid "(Intermediate level, 10 scenarios.)"
-msgstr "(Niveau intermédiaire, 10 scénarios)."
+msgstr "(Niveau intermédiaire, 10 scénarios.)"
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:22
