--- a/po/wesnoth-ei/fr.po
+++ b/po/wesnoth-ei/fr.po
@@ -32,7 +32,7 @@ msgstr "IO"
 #. [campaign]: id=Eastern_Invasion
 #: data/campaigns/Eastern_Invasion/_main.cfg:16
 msgid "(Easy)"
-msgstr "(facile)"
+msgstr "(Facile)"
 
 #. [campaign]: id=Eastern_Invasion
 #: data/campaigns/Eastern_Invasion/_main.cfg:16
@@ -42,7 +42,7 @@ msgstr "Porte-lance"
 #. [campaign]: id=Eastern_Invasion
 #: data/campaigns/Eastern_Invasion/_main.cfg:17
 msgid "(Normal)"
-msgstr "(normal)"
+msgstr "(Normal)"
 
 #. [campaign]: id=Eastern_Invasion
 #: data/campaigns/Eastern_Invasion/_main.cfg:17
@@ -52,7 +52,7 @@ msgstr "Épéiste"
 #. [campaign]: id=Eastern_Invasion
 #: data/campaigns/Eastern_Invasion/_main.cfg:18
 msgid "(Challenging)"
-msgstr "(difficile)"
+msgstr "(Difficile)"
 
 #. [campaign]: id=Eastern_Invasion
 #: data/campaigns/Eastern_Invasion/_main.cfg:18
@@ -62,7 +62,7 @@ msgstr "Garde royal"
 #. [campaign]: id=Eastern_Invasion
 #: data/campaigns/Eastern_Invasion/_main.cfg:21
 msgid "(Intermediate level, 16 scenarios.)"
-msgstr "(Niveau moyen, 16 scénarios.)"
+msgstr "(Niveau intermédiaire, 16 scénarios.)"
 
 #. [campaign]: id=Eastern_Invasion
 #: data/campaigns/Eastern_Invasion/_main.cfg:21
