--- a/po/wesnoth-help/fr.po
+++ b/po/wesnoth-help/fr.po
@@ -519,8 +519,8 @@ msgid ""
 "The <ref>dst='swarmlings' text='Swarmlings'</ref> that have left the "
 "<ref>dst='aerie' text='aerie'</ref> to found a new one."
 msgstr ""
-"Les <ref>dst='swarmlings' text='essaimeurs'</ref> sont ceux qui quittent "
-"le<ref>dst='aerie' text='nid de dragon'</ref> pour en fonder un nouveau."
+"Les <ref>dst='swarmlings' text='essaimeurs'</ref> sont ceux qui quittent le "
+"<ref>dst='aerie' text='nid de dragon'</ref> pour en fonder un nouveau."
 
 #. [topic]: id=swarming
 #: data/core/encyclopedia/drakes.cfg:145
@@ -688,9 +688,9 @@ msgid ""
 "It is mostly inhabited by <ref>dst='..race_drake' text='drakes'</ref>.\n"
 "The central island of the archipelago is also called ‘Morogor’."
 msgstr ""
-"Archipel situé quelque part dans le Grand Océan, à l'ouest de l' "
-"<ref>dst='green_isle' text='Île Verte'</ref> et à l'est du "
-"<ref>dst=old_continent text='Vieux Continent'</ref>.\n"
+"Archipel situé quelque part dans le <ref>dst='great_ocean' text='Grand "
+"Océan'</ref>, à l'ouest de l' <ref>dst='green_isle' text='Île Verte'</ref> "
+"et à l'est du <ref>dst=old_continent text='Vieux Continent'</ref>.\n"
 "Il est peuplé principalement de <ref>dst='..race_drake' text='dracans'</"
 "ref>.\n"
 "L'île centrale de l'archipel est aussi appelée « Morogor »."
@@ -1492,20 +1492,20 @@ msgstr ""
 #. [topic]: id=orbs
 #: data/core/help.cfg:180
 msgid " green if it hasn’t moved this turn,"
-msgstr "vert si elle ne s'est pas encore déplacée pendant ce tour,"
+msgstr " vert si elle ne s'est pas encore déplacée pendant ce tour,"
 
 #. [topic]: id=orbs
 #: data/core/help.cfg:181
 msgid " yellow if it has moved, but could still move further or attack, or"
 msgstr ""
-"jaune si elle a déjà bougé, mais pourrait encore se déplacer ou attaquer,"
+" jaune si elle a déjà bougé, mais pourrait encore se déplacer ou attaquer,"
 
 #. [topic]: id=orbs
 #: data/core/help.cfg:182
 msgid ""
 " red if it can no longer move or attack, or the user ended the unit’s turn."
 msgstr ""
-"rouge si elle ne peut plus se déplacer ni attaquer, ou si le joueur a mis "
+" rouge si elle ne peut plus se déplacer ni attaquer, ou si le joueur a mis "
 "fin à son tour."
 
 #. [topic]: id=orbs
@@ -1517,7 +1517,8 @@ msgstr " bleu si l'unité est sous le contrôle d'un allié."
 #: data/core/help.cfg:184
 msgid " Enemy units have no orb on top of their energy bar."
 msgstr ""
-"Les unités ennemies n'ont pas d'orbe au dessus de leur barre de point de vie."
+" Les unités ennemies n'ont pas d'orbe au dessus de leur barre de point de "
+"vie."
 
 #. [topic]: id=hitpoints
 #: data/core/help.cfg:191
