--- a/po/wesnoth-nr/fr.po
+++ b/po/wesnoth-nr/fr.po
@@ -27,7 +27,7 @@ msgstr "RN"
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:15
 msgid "(Normal)"
-msgstr "(normal)"
+msgstr "(Normal)"
 
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:15
@@ -37,7 +37,7 @@ msgstr "Paysan"
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:16
 msgid "(Challenging)"
-msgstr "(difficile)"
+msgstr "(Difficile)"
 
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:16
@@ -47,7 +47,7 @@ msgstr "Porte-lance"
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:17
 msgid "(Difficult)"
-msgstr "(très difficile)"
+msgstr "(Très difficile)"
 
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:17
@@ -57,7 +57,7 @@ msgstr "Spadassin"
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:18
 msgid "(Nightmare)"
-msgstr "(cauchemardesque)"
+msgstr "(Cauchemardesque)"
 
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:18
@@ -67,7 +67,7 @@ msgstr "Garde royal"
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:22
 msgid "(Expert level, 13 scenarios.)"
-msgstr "(Niveau expert : 13 scénarios)."
+msgstr "(Niveau expert, 13 scénarios.)"
 
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:22
@@ -486,7 +486,7 @@ msgid ""
 "(<i>Sigh</i>) Yes, well I know it. But would you rather live as slaves to "
 "the orcs forever?"
 msgstr ""
-" (<i>soupir</i>) Oui, je sais. Mais tu préfères rester esclave des orcs pour "
+"(<i>soupir</i>) Oui, je sais. Mais tu préfères rester esclave des orcs pour "
 "toujours ?"
 
 #. [message]: speaker=Zlex
@@ -863,7 +863,7 @@ msgstr "Nous y voilà."
 #. [message]: role=Supporter
 #: data/campaigns/Northern_Rebirth/scenarios/02_Infested_Caves.cfg:220
 msgid "(<i>Trip</i>) <i>Oof!</i>"
-msgstr "(<i>Trébuche</i>) <i>AÏE !<i>"
+msgstr "(<i>Trébuche</i>) <i>AÏE !</i>"
 
 #. [message]: role=Supporter
 #: data/campaigns/Northern_Rebirth/scenarios/02_Infested_Caves.cfg:224
@@ -972,12 +972,12 @@ msgstr "Euh... d'accord..."
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/02_Infested_Caves.cfg:312
 msgid "whisper^Is it safe to have this lunatic with us?"
-msgstr " chuchoter^c'est pas un peu dangereux d'emmener ce dingue ?"
+msgstr "C'est pas un peu dangereux d'emmener ce dingue ?"
 
 #. [message]: speaker=Camerin
 #: data/campaigns/Northern_Rebirth/scenarios/02_Infested_Caves.cfg:328
 msgid "<i>Burn, you disgusting filth!</i>"
-msgstr "<i>Brûle en enfer, sale pourriture !"
+msgstr "<i>Brûle en enfer, sale pourriture !</i>"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Northern_Rebirth/scenarios/02_Infested_Caves.cfg:332
@@ -1909,7 +1909,7 @@ msgid ""
 "(<i>Shakes head</i>) I reject your evil. Attack, men! Let us rid the good "
 "green world of this rotting filth!"
 msgstr ""
-"(<i>Agite la tête/i>) Je rejette tes maléfices. Attaquez les gars ! "
+"(<i>Agite la tête</i>) Je rejette tes maléfices. Attaquez les gars ! "
 "Nettoyons notre splendide monde verdoyant de cette  pourriture !"
 
 #. [message]: speaker=Hamel
@@ -2849,7 +2849,8 @@ msgstr "La Chambre Colossale"
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:1495
 msgid "‘The Great Chamber’? Hmmm, wonder what that could be."
-msgstr " La Chambre Colossale ? Hemm, je m'demande ce que ça peut bien être."
+msgstr ""
+"« La Chambre Colossale » ? Hemm, je m'demande ce que ça peut bien être."
 
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:1513
@@ -2976,13 +2977,14 @@ msgstr ""
 
 #. [message]: speaker=narrator
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:1676
+#, fuzzy
 msgid "Should this unit pick up the Rod of Justice?"
-msgstr "Vous devez trouver le Sceptre de Justice."
+msgstr "Est ce que cette unité doit prendre le Sceptre de Justice ?"
 
 #. [option]: speaker=narrator
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:1678
 msgid "rod of justice^Take it"
-msgstr "sceptre de Justice^Le prendre"
+msgstr "Le prendre"
 
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:1682
@@ -3073,7 +3075,7 @@ msgstr "sceptre de Justice"
 #. [option]: speaker=narrator
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:1802
 msgid "rod of justice^Leave it"
-msgstr "sceptre de Justice^Laisser le"
+msgstr "Le laisser"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:1828
@@ -4680,7 +4682,7 @@ msgstr "Mon Dieu ! Tallin, c'est toi ?"
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/06b_Slave_of_the_Undead.cfg:284
 msgid "$betrayed_friend.name, I..."
-msgstr " $betrayed_friend.name, Je..."
+msgstr "$betrayed_friend.name, je..."
 
 #. [message]: speaker=Betrayed Friend
 #: data/campaigns/Northern_Rebirth/scenarios/06b_Slave_of_the_Undead.cfg:289
@@ -4715,7 +4717,7 @@ msgstr "Sourd aux appels de ses amis, Tallin lança l'attaque."
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/06b_Slave_of_the_Undead.cfg:343
 msgid "What have I done...?"
-msgstr "Qu'est-ce que j'ai fais...?"
+msgstr "Qu'est-ce que j'ai fait... ?"
 
 #. [message]: speaker=Malifor
 #: data/campaigns/Northern_Rebirth/scenarios/06b_Slave_of_the_Undead.cfg:369
@@ -5232,17 +5234,17 @@ msgstr ""
 #. [message]: id=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:429
 msgid "whisper^Camerin, you know him?"
-msgstr "chuchoter^Camerin, tu le connais ?"
+msgstr "Camerin, tu le connais ?"
 
 #. [message]: id=Camerin
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:433
 msgid "whisper^Duh! His brother Ro’Arthian is the one who taught me magic!"
-msgstr "chuchoter^Oui ! Son frère Ro'Arthian m'a enseigné la magie !"
+msgstr "Oui ! Son frère Ro'Arthian m'a enseigné la magie !"
 
 #. [message]: id=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:437
 msgid "whisper^Oh...!"
-msgstr "chuchoter^Oh...!"
+msgstr "Oh... !"
 
 #. [message]: id=Father Morvin
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:443
@@ -7668,7 +7670,7 @@ msgstr "Bonjour, Tallin."
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/09b_Judgment.cfg:134
 msgid "$betrayed_friend.name, you?"
-msgstr " $betrayed_friend.name, toi ?"
+msgstr "$betrayed_friend.name, toi ?"
 
 #. [message]: speaker=Betrayed Friend
 #: data/campaigns/Northern_Rebirth/scenarios/09b_Judgment.cfg:139
@@ -9406,7 +9408,7 @@ msgstr "Princesse ! Vous êtes ici ! Comment va Hidel ?"
 #. [message]: id=Eryssa
 #: data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg:419
 msgid "(<i>Sheds a tear</i>)"
-msgstr " (<i>Verse une larme</i>)"
+msgstr "(<i>Verse une larme</i>)"
 
 #. [message]: id=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg:423
@@ -10226,7 +10228,7 @@ msgstr ""
 #. [message]: id=Elenia
 #: data/campaigns/Northern_Rebirth/scenarios/14a_Epilogue.cfg:259
 msgid "(<i>Smiles</i>) It is not unlikely..."
-msgstr " (<i>Sourire</i>) C'est probable..."
+msgstr "(<i>Sourire</i>) C'est probable..."
 
 #. [message]: id=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/14a_Epilogue.cfg:265
@@ -10983,7 +10985,7 @@ msgstr "(<i>Gloussements</i>) Désolée."
 #. [message]: speaker=Elenia
 #: data/campaigns/Northern_Rebirth/utils/herodeaths.cfg:803
 msgid "Alas! My wanderings have come to an end."
-msgstr " Hélas ! Voici la fin de mes aventures."
+msgstr "Hélas ! Voici la fin de mes aventures."
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/utils/herodeaths.cfg:807
