--- a/po/wesnoth-sotbe/fr.po
+++ b/po/wesnoth-sotbe/fr.po
@@ -68,7 +68,7 @@ msgstr "Seigneur de guerre"
 #. [campaign]: id=Son_of_the_Black-Eye
 #: data/campaigns/Son_Of_The_Black_Eye/_main.cfg:22
 msgid "(Expert level, 18 scenarios.)"
-msgstr "(Niveau Expert, 18 scénarios)"
+msgstr "(Niveau expert, 18 scénarios.)"
 
 #. [campaign]: id=Son_of_the_Black-Eye
 #: data/campaigns/Son_Of_The_Black_Eye/_main.cfg:22
@@ -594,7 +594,7 @@ msgstr ""
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:170
 msgid "$stored_helper.name|!"
-msgstr " $stored_helper.name| !"
+msgstr "$stored_helper.name| !"
 
 #. [message]: role=Helper
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:175
@@ -2993,7 +2993,7 @@ msgid ""
 "The Great Horde is almost here! Drive them out of our villages <b>now</b>!"
 msgstr ""
 "La Grande Horde est presque arrivée ! Expulsez-les de nos villages "
-"<b>maintenant</ b> !"
+"<b>maintenant</b> !"
 
 #. [message]: speaker=Gork
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:1130
@@ -4303,8 +4303,7 @@ msgid ""
 "Howgarth? You and your interfering alliance always show up at the worst "
 "possible time."
 msgstr ""
-" Howgarth ? Ton alliance et toi, vous arrivez toujours au plus mauvais "
-"moment."
+"Howgarth ? Ton alliance et toi, vous arrivez toujours au plus mauvais moment."
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/17_The_Human_Attack.cfg:701
