Updated the Latin translation.

--- a/po/wesnoth-low/la.po
+++ b/po/wesnoth-low/la.po
@@ -3749,7 +3749,9 @@ msgstr ""
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:585
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:751
 msgid "The brazen cry of a war-horn is heard in the distance."
-msgstr "Clangor aenus principio procul auditus cornus."
+msgstr ""
+"Clangor aenus principio procul auribus cornus\n"
+"Editus attonitis."
 
 #. [unit]: id=Aldun, type=Horseman
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:499
@@ -3861,13 +3863,13 @@ msgstr "Orces putros premendos video! Irruite!"
 #. [message]: race=orc
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:927
 msgid "More of the cursed horse-pokers!! Run, let’s get out of here!"
-msgstr "Plurem caballicudentium exsecrabilium!! Currite, effugiamus!"
+msgstr "Plures caballicudentium exsecrabilium!! Currite, effugiamus!"
 
 # Another hexameter
 #. [message]: speaker=narrator
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:933
 msgid "The not-at-all-brazen cry of a war-horn is heard in the distance."
-msgstr "Clangor aenus non posthac procul auditus cornus."
+msgstr "Clangor aenus non posthac procul editus cornus."
 
 #. [message]: id=Aldar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:950
