Added --username and --password options.
Together with the --server option they allow starting several clients
that all join the server automatically.

When these options are used, preferences are not saved.
man page updated, hope I didn't miss anything.

--- a/doc/man/wesnoth.6
+++ b/doc/man/wesnoth.6
@@ -189,6 +189,12 @@ sets the screen resolution. Example:
 connects to the specified host if any, otherwise connect to the first server in preferences. Example:
 .B --server server.wesnoth.org
 .TP
+.BI --username <username>
+uses <username> when connecting to a server, ignoring other preferences.
+.TP
+.BI --password <password>
+uses <password> when connecting to a server, ignoring other preferences. Unsafe.
+.TP
 .B --strict-validation
 validation errors are treated as fatal errors.
 .TP
