updated Galician and German translation

--- a/po/wesnoth-tutorial/gl.po
+++ b/po/wesnoth-tutorial/gl.po
@@ -1596,11 +1596,12 @@ msgstr ""
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1138
 msgid ""
-"No other units can reach that orc. I hope my $unit.language_name survives its counter-"
-"attack! I’d better grab more villages and move everyone closer for next turn."
+"No other units can reach that orc. I hope my $unit.language_name survives "
+"its counter-attack! I’d better grab more villages and move everyone closer "
+"for next turn."
 msgstr ""
-"Ninguén máis vai poder achegarse ao orco. $unit.language_name, aguanta aí! Será "
-"mellor conseguir máis vilas e achegar aos demais para a seguinte quenda."
+"Ninguén máis vai poder achegarse ao orco. $unit.language_name, aguanta aí! "
+"Será mellor conseguir máis vilas e achegar aos demais para a seguinte quenda."
 
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1139
