--- a/po/wesnoth-manual/gl.po
+++ b/po/wesnoth-manual/gl.po
@@ -6,12 +6,12 @@
 #
 # Leandro Regueiro <leandro.regueiro@gmail.com>, 2007, 2008.
 # Fran Diéguez <fran dot dieguez at glug dot es>, 2008.
-# Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail.com>, 2010, 2011.
+# Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail.com>, 2010, 2011, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
-"POT-Creation-Date: 2012-01-03 10:55+0100\n"
-"PO-Revision-Date: 2011-10-16 00:40+0200\n"
+"POT-Creation-Date: 2012-01-22 14:59+0100\n"
+"PO-Revision-Date: 2012-02-19 11:15+0100\n"
 "Last-Translator: Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail."
 "com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
@@ -20,8 +20,9 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "com>\n"
+"com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 1.2\n"
+"X-Generator: Lokalize 1.4\n"
 
 # type: Attribute 'lang' of: <book>
 #. type: Attribute 'lang' of: <book>
@@ -2134,6 +2135,15 @@ msgstr "Adiantar a acción na cola."
 # type: Content of: <book><chapter><section><simpara>
 #. type: Content of: <book><chapter><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:1307
+#, fuzzy
+#| msgid ""
+#| "Each side is given some amount of gold to begin with, and receives 2 gold "
+#| "pieces per turn, plus 2 more gold pieces for every village that side "
+#| "controls. In a campaign, starting gold is a minimum amount defined by the "
+#| "scenario, which is typically lower as the difficulty level increases. In "
+#| "addition you often get a percentage of gold to carry over from the last "
+#| "scenario played. The exact percentage depends on the scenario and is "
+#| "usually displayed as part of the scenario objectives."
 msgid ""
 "Each side is given some amount of gold to begin with, and receives 2 gold "
 "pieces per turn, plus 2 more gold pieces for every village that side "
@@ -2142,12 +2152,12 @@ msgid ""
 "scenario, which is typically lower as the difficulty level increases."
 msgstr ""
 "Cada bando comeza cunha certa cantidade de ouro, e recibe dúas moedas de "
-"ouro por rolda. Ademais, por cada vila baixo o seu control recibirá unha "
-"certa cantidade por rolda, xeralmente unha moeda de ouro por vila. Nunha "
-"campaña, o ouro inicial será como moito o 80% do ouro co que se rematou o "
-"escenario anterior, e como mínimo a cantidade mínima definida para o "
-"escenario, que adoita diminuír a medida que se aumenta o nivel de "
-"dificultade."
+"ouro por rolda, máis outras dúas por cada vila que controle. Nunha campaña, "
+"o ouro inicial será unha cantidade mínima definida polo escenario, que "
+"adoita diminuír a medida que se aumenta o nivel de dificultade. "
+"Adicionalmente, adóitase recibir unha porcentaxe do ouro conseguido no "
+"escenario anterior. A porcentaxe concreta dependerá do escenario en "
+"concreto, e adoita amosarse como parte dos obxectivos do escenario."
 
 #. type: Content of: <book><chapter><section><section><title>
 #: /src/wesnoth/doc/manual/manual.en.xml:1313
