updated German and Hungarian translation

--- a/po/wesnoth-lib/de.po
+++ b/po/wesnoth-lib/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-08 18:12+0100\n"
+"POT-Creation-Date: 2012-01-22 15:00+0100\n"
 "PO-Revision-Date: 2012-01-20 12:46+0100\n"
 "Last-Translator: Nils Kneuper <crazy-ivanovic  AT gmx  D O  T net>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
@@ -3850,8 +3850,8 @@ msgid ""
 "The key '$key' is deprecated and support will be removed in version "
 "$removal_version."
 msgstr ""
-"Der Schlüssel »$deprecated_key« ist veraltet und die Unterstützung wird in "
-"Version $removal_version entfernt."
+"Der Schlüssel »$key« ist veraltet und die Unterstützung wird in Version "
+"$removal_version entfernt."
 
 #: src/wml_exception.cpp:130
 msgid ""
