--- a/po/wesnoth-tutorial/hu.po
+++ b/po/wesnoth-tutorial/hu.po
@@ -1583,12 +1583,13 @@ msgstr ""
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1138
 msgid ""
-"No other units can reach that orc. I hope my $unit.language_name survives its counter-"
-"attack! I’d better grab more villages and move everyone closer for next turn."
+"No other units can reach that orc. I hope my $unit.language_name survives "
+"its counter-attack! I’d better grab more villages and move everyone closer "
+"for next turn."
 msgstr ""
-"A többi egység nem tudja elérni az orkot. Remélem, a $unit.language_name egységem "
-"túléli az ellentámadást! Jobban tenném, ha foglalnék még falvakat, és "
-"mindenkit közelebb tolnék hozzájuk a következő körre."
+"A többi egység nem tudja elérni az orkot. Remélem, a $unit.language_name "
+"egységem túléli az ellentámadást! Jobban tenném, ha foglalnék még falvakat, "
+"és mindenkit közelebb tolnék hozzájuk a következő körre."
 
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1139
